[package]
name = "tennet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full",  "tracing", "macros", "time"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1"
rust_decimal = { version = "1.37", features = ["db-tokio-postgres"] }
rust_decimal_macros = "1.37"
axum = { version = "0.8", features = ["macros", "json"] }
rumqttc = "0.24.0"
csv = "1.3.1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "time" ] }
lazy_static = "1.5"
toml = "0.8.22"
tracing = "0.1"
tracing-subscriber = "0.3"
