[package]
name = "tennet"
version = "0.0.2"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full",  "tracing", "macros", "time"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rust_decimal = { version = "1.39", features = ["db-tokio-postgres"] }
rust_decimal_macros = "1.39"
axum = { version = "0.8", features = ["macros", "json"] }
rumqttc = "0.24"
csv = "1.4"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "time" ] }
lazy_static = "1.5"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6.6", features = [ "cors" ] }
