[package]
name = "tennet"
version = "0.0.6"
edition = "2024"

[dependencies]
tokio = { version = "1.50", features = ["full",  "tracing", "macros", "time"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "json"] }
rumqttc = "0.25"
csv = "1.4"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "time" ] }
lazy_static = "1.5"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = [ "cors" ] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = { version = "0.2" }
